index estudiante cambio tipo de validacion de estado

--- a/Views/Estudiante/Index.cshtml
+++ b/Views/Estudiante/Index.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenido Estudiante</h1>
-    <table class="table table-dark">
+    <h1 class="display-4">Información de Grupo</h1>
+  <table class="table table-dark">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -26,5 +26,27 @@
     }
   </tbody>
 </table>
-
+<hr>
+<h1 class="display-4">Integrante del Grupo</h1>
+    <table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Nombre</th>
+      <th scope="col">Dirección</th>
+      <th scope="col">Correo</th>
+      <th scope="col">Telefono</th>
+    </tr>
+  </thead>
+  <tbody>
+    @foreach (var item in ViewBag.CuerpoGrupoEstudiantes as IQueryable<ControlTesisCore.Models.BD.CuerpoGrupoEstudiante>)
+    {
+    <tr>
+      <th scope="row">@item.Nombre @item.Apellido</th>
+      <td>@item.Direccion</td>
+      <td>@item.Correo</td>
+      <td>@item.</td>
+    </tr>
+    }
+  </tbody>
+</table>
 </div>
