--- a/Views/Estudiante/Index.cshtml
+++ b/Views/Estudiante/Index.cshtml
@@ -27,7 +27,7 @@
   </tbody>
 </table>
 <hr>
-<h1 class="display-4">Integrante del Grupo</h1>
+<h1 class="display-4">Integrantes del Grupo</h1>
     <table class="table table-dark">
   <thead>
     <tr>
@@ -44,7 +44,7 @@
       <th scope="row">@item.Nombre @item.Apellido</th>
       <td>@item.Direccion</td>
       <td>@item.Correo</td>
-      <td>@item.</td>
+      <td>@item.Telefono</td>
     </tr>
     }
   </tbody>
