--- a/Views/Estudiante/Index.cshtml
+++ b/Views/Estudiante/Index.cshtml
@@ -31,8 +31,9 @@
     <table class="table table-dark">
   <thead>
     <tr>
+      <th scope="col">Carnet</th>
       <th scope="col">Nombre</th>
-      <th scope="col">Dirección</th>
+      <th scope="col">Carrera</th>
       <th scope="col">Correo</th>
       <th scope="col">Telefono</th>
     </tr>
@@ -41,8 +42,9 @@
     @foreach (var item in ViewBag.CuerpoGrupoEstudiantes as IQueryable<ControlTesisCore.Models.BD.CuerpoGrupoEstudiante>)
     {
     <tr>
-      <th scope="row">@item.Nombre @item.Apellido</th>
-      <td>@item.Direccion</td>
+      <th scope="row">@item.Carnet</th>
+      <td>@item.Nombre</td>
+      <td>@item.Carrera</td>
       <td>@item.Correo</td>
       <td>@item.Telefono</td>
     </tr>
