controlador view perfil y cerrar

--- a/Views/Shared/_LayoutEstudiante.cshtml
+++ b/Views/Shared/_LayoutEstudiante.cshtml
@@ -21,7 +21,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Estudiante" asp-action="Index">Home</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Estudiante" asp-action="Perfil" >Perfil</a>
+                        </li>
                     </ul>
+                    <a class="nav-link text-dark" asp-controller="Estudiante" asp-action="Desconectar">Cerrar</a>
                 </div>
             </div>
         </nav>
