--- a/Views/Shared/_LayoutEstudiante.cshtml
+++ b/Views/Shared/_LayoutEstudiante.cshtml
@@ -16,16 +16,21 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="navbar-collapse collapse ">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Estudiante" asp-action="Index">Home</a>
                         </li>
-                        <li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Estudiante" asp-action="Perfil" >Perfil</a>
                         </li>
+                       
                     </ul>
-                    <a class="nav-link text-dark" asp-controller="Estudiante" asp-action="Desconectar">Cerrar</a>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="nav-item ">
+                            <a class="nav-link text-dark" asp-controller="Estudiante" asp-action="Desconectar"><span class="glyphicon glyphicon-off">Desconectar</span></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
