--- a/Views/Estudiante/Index.cshtml
+++ b/Views/Estudiante/Index.cshtml
@@ -2,53 +2,67 @@
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_LayoutEstudiante.cshtml";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Información de Grupo</h1>
-  <table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Docente</th>
-      <th scope="col">Tema</th>
-      <th scope="col">Nota</th>
-    </tr>
-  </thead>
-  <tbody>
-    @foreach (var item in ViewBag.CabezaGrupoEstudiante as IQueryable<ControlTesisCore.Models.BD.CabezaGrupoEstudiante>)
-    {
-    <tr>
-      <th scope="row">@item.IdGrupo</th>
-      <td>@item.Docente</td>
-      <td>@item.Tema</td>
-      <td>@item.Nota</td>
-    </tr>
-    }
-  </tbody>
-</table>
-<hr>
-<h1 class="display-4">Integrantes del Grupo</h1>
-    <table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">Carnet</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Carrera</th>
-      <th scope="col">Correo</th>
-      <th scope="col">Telefono</th>
-    </tr>
-  </thead>
-  <tbody>
-    @foreach (var item in ViewBag.CuerpoGrupoEstudiantes as IQueryable<ControlTesisCore.Models.BD.CuerpoGrupoEstudiante>)
-    {
-    <tr>
-      <th scope="row">@item.Carnet</th>
-      <td>@item.Nombre</td>
-      <td>@item.Carrera</td>
-      <td>@item.Correo</td>
-      <td>@item.Telefono</td>
-    </tr>
-    }
-  </tbody>
-</table>
+<div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="shadow-sm p-3 mb-5 bg-white rounded">
+          <div class="table-responsive-sm">
+          <h1 class="display-4">Información de Grupo</h1>
+            <table class="table table-dark">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Docente</th>
+                <th scope="col">Tema</th>
+                <th scope="col">Nota</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var item in ViewBag.CabezaGrupoEstudiante as IQueryable<ControlTesisCore.Models.BD.CabezaGrupoEstudiante>)
+              {
+              <tr>
+                <th scope="row">@item.IdGrupo</th>
+                <td>@item.Docente</td>
+                <td>@item.Tema</td>
+                <td>@item.Nota</td>
+              </tr>
+              }
+            </tbody>
+          </table>
+        </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="shadow-sm p-3 mb-5 bg-white rounded">
+          <div class="table-responsive-sm">
+          <h1 class="display-4">Integrantes del Grupo</h1>
+              <table class="table table-dark">
+                <thead>
+                  <tr>
+                    <th scope="col">Carnet</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Carrera</th>
+                    <th scope="col">Correo</th>
+                    <th scope="col">Telefono</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  @foreach (var item in ViewBag.CuerpoGrupoEstudiantes as IQueryable<ControlTesisCore.Models.BD.CuerpoGrupoEstudiante>)
+                  {
+                  <tr>
+                    <th scope="row">@item.Carnet</th>
+                    <td>@item.Nombre</td>
+                    <td>@item.Carrera</td>
+                    <td>@item.Correo</td>
+                    <td>@item.Telefono</td>
+                  </tr>
+                  }
+                </tbody>
+              </table>
+          </div>
+        </div>
+      </div> 
+    </div>
+  </div>
 </div>
