--- a/Views/Estudiante/ModificarPerfil.cshtml
+++ b/Views/Estudiante/ModificarPerfil.cshtml
@@ -1,4 +1,4 @@
-
+@model ControlTesisCore.Models.BD.EstudiantePerfil
 @{
     ViewData["Title"] = "Modificar Perfil";
     Layout = "~/Views/Shared/_LayoutEstudiante.cshtml";
@@ -8,4 +8,53 @@
     <div class="shadow-sm p-3 mb-5 bg-white rounded">
         <h1 class="display-4">Modificar Perfil Estudiante</h1>
     </div>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken();
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true,"",new {@class="text-danger"})
+            @Html.HiddenFor(model=>model.IdUsuario)
+            <div class="form-group">
+                @Html.LabelFor(model=>model.Nombre,htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model=>model.Apellido,htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Apellido, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model=>model.Telefono,htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model=>model.Direccion,htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model=>model.Correo,htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control", @type="email" } })
+                    @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+    <a asp-action="Perfil" asp-controller="Estudiante" ></a>
 </div>
