--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -5,7 +5,8 @@
 <div class="shadow-lg p-3 mb-5 bg-white rounded">
     <div class="text-center">
         <h1 class="display-4">Login</h1>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Login", "Home",
+           FormMethod.Post, new { @class = "invalid-feedback" }))
     {
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
@@ -14,14 +15,14 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Carnet, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div>
-                    @Html.EditorFor(model => model.Carnet, new { htmlAttributes = new { @class = "form-control" , @placeholder="Ejem: 27-1023-2016" } })
-                    @Html.ValidationMessageFor(model => model.Carnet, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Carnet, new { htmlAttributes = new { @class = "form-control is-invalid", @required = "required", @placeholder="Ejem: 27-1023-2016" } })
+                    @Html.ValidationMessageFor(model => model.Carnet, "", new { @class = "invalid-feedback" })
                 </div>
                 <p></p>
                 @Html.LabelFor(model => model.Contraseña, htmlAttributes: new { @class = "control-label col-md-2"})
                 <div>
-                    @Html.PasswordFor(model => model.Contraseña, new { @class = "form-control",@placeholder="Contraseña" })
-                    @Html.ValidationMessageFor(model => model.Contraseña, "", new { @class = "text-danger" })
+                    @Html.PasswordFor(model => model.Contraseña, new { @class = "form-control is-invalid", @required = "required",@placeholder="Contraseña" })
+                    @Html.ValidationMessageFor(model => model.Contraseña, "", new { @class = "invalid-feedback" })
                 </div>
             </div>
             <div class="form-group">
